--- a/R_analysis/R_read-data.Rmd
+++ b/R_analysis/R_read-data.Rmd
@@ -112,7 +112,7 @@ To read in a file that is saved in the same directory as the .Rproj file:
 
 ```{r}
 library(here)
-fev_data <- read_csv(here("fev.csv"))
+fev_data <- read_csv(here("Raw_data/fev.csv"))
 ```
 
 (Remember to install the "here" package the first time.)
@@ -149,14 +149,15 @@ excel_data <- read_xlsx(filename, sheet = 1) #(to read the first sheet)
 There is a text file in your dataset so you can practice: psa.txt
 
 ```{r}
-# Add your code here!
+library(here)
+psa_data <- read_delim(here("Raw_data/psa.txt"))
 ```
 
 --> Have a look at the "Useful arguments" section of the data import cheat sheet. 
 Use a few of them when you read in fev.csv and look at the data, is that what you expected?
 
 ```{r}
-# Add your code here!
+head(fev_data,col_names = FALSE)
 ```
 
 --> Apply the summary function to a tibble. What does it do?
